@@ -95,7 +95,7 @@ release</a> of <a href="http://www.dre.vanderbilt.edu/CIAO">CIAO</a>:
 
 </ol>
 
-<b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@cse.wustl.edu</ADDRESS>
+<b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@list.isis.vanderbilt.edu</ADDRESS>
 </body> </html>
 
 <!--  LocalWords:  TODOs CCM IDL backend idl
